# haskell-digg-oidc

./: LICENSE  README.md  SECURITY.md  compose.yml  haskell-digg-oidc.cabal  hie.yaml  stack.yaml
example/: Main.hs
src/Digg/OIDC/: Client.hs  Types.hs
src/Digg/OIDC/Client/: Claims.hs  Discovery.hs  Internal.hs  Session.hs  Tokens.hs
src/Digg/OIDC/Client/Discovery/: Provider.hs
src/Digg/OIDC/Client/Flow/: AuthorizationCodeFlow.hs  LogoutFlow.hs  RefreshTokenFlow.hs
src/Digg/OIDC/Client/Storage/: MemoryStore.hs  PostgreSQLStore.hs  Random.hs  RedisStore.hs
test/: Internal.hs  discover.json
test/Digg/OIDC/: TypesSpec.hs
test/Digg/OIDC/Client/: DiscoverySpec.hs  InternalSpec.hs
test/data/: jwks.json
