cabal-version:       2.2

name:                haskell-digg-oidc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-digg-oidc#readme
license:             MIT
license-file:        LICENSE
author:              Tomas Stenlund
maintainer:          tomas.stenlund@telia.com
copyright:           2024 Digg - Agency for Digital Government
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
                     CODE_OF_CONDUCT.md
                     CONTRIBUTING.md
                     SECURITY.md
library
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  exposed-modules:    Digg.OIDC.Client.Session
                      , Digg.OIDC.Client.Storage.RedisStore
                      , Digg.OIDC.Client.Storage.MemoryStore
                      , Digg.OIDC.Client.Storage.PostgreSQLStore
                      , Digg.OIDC.Client.Storage.Random
                      , Digg.OIDC.Client.Discovery.Provider
                      , Digg.OIDC.Client.Discovery
                      , Digg.OIDC.Client.Tokens
                      , Digg.OIDC.Client.Flow.AuthorizationCodeFlow
                      , Digg.OIDC.Client.Flow.LogoutFlow
                      , Digg.OIDC.Client.Flow.RefreshTokenFlow
                      , Digg.OIDC.Client
                      , Digg.OIDC.Types
                      , Digg.OIDC.Client.Internal   
  build-depends:       base >= 4.7 && < 5
                      , mtl
                      , bytestring
                      , aeson
                      , text
                      , http-client
                      , http-types
                      , time
                      , hedis
                      , network-uri
                      , exceptions
                      , jose-jwt
                      , containers
                      , postgresql-simple
                      , resource-pool
                      , random-bytestring
                      , base64-bytestring
                      , crypton
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

executable digg-oidc-example
  hs-source-dirs:      example
  main-is:             Main.hs
  other-modules:
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , crypton
                      , mtl
                      , bytestring
                      , aeson
                      , text
                      , base64-bytestring
                      , http-client
                      , http-client-tls
                      , http-types
                      , wai-extra
                      , blaze-html
                      , scotty
                      , time
                      , wai
                      , hedis
                      , network-uri
                      , exceptions
                      , haskell-digg-oidc
                      , pretty-simple
  ghc-options:         -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints

test-suite digg-oidc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Digg.OIDC.TypesSpec
                      , Digg.OIDC.Client.DiscoverySpec
                      , Digg.OIDC.Client.InternalSpec
                      , Internal
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , aeson
                     , haskell-digg-oidc
                     , network-uri
                     , scotty
                     , wai
                     , http-mock
                     , Interpolation
                     , http-types
                     , http-client
                     , hspec-core
                     , jose-jwt
                     , cryptonite
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O2
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

